<resources>
    <string name="app_name">USDA FMExchange</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="l_Default_Menu_0">Home</string>
    <string name="l_Default_Menu_1">Sign In</string>
    <string name="l_Default_Menu_2">Customer Service</string>
    <string name="l_Vendor_Menu_0">Home</string>
    <string name="l_Vendor_Menu_1">Add a Post</string>
    <string name="l_Vendor_Menu_2">Vendor Profile</string>
    <string name="l_Vendor_Menu_3">Friends &#38; Messages</string>
    <string name="l_Vendor_Menu_4">Account &#38; Settings</string>
    <string name="l_Vendor_Menu_5">Customer Service</string>
    <string name="l_Vendor_Menu_6">Sign Out</string>
    <string name="l_Customer_Menu_0">Home</string>
    <string name="l_Customer_Menu_1">Friends &#38; Messages</string>
    <string name="l_Customer_Menu_2">Account &#38; Settings</string>
    <string name="l_Customer_Menu_3">Sign Up As a Vendor</string>
    <string name="l_Customer_Menu_4">Customer Service</string>
    <string name="l_Customer_Menu_5">Sign Out</string>
    <string name="l_Menu_CustomerService_0">About Us</string>
    <string name="l_Menu_CustomerService_1">Contact Us</string>
    <string name="l_Menu_CustomerService_2">Privacy and Term of Use</string>
    <string name="l_Menu_CustomerService_3">Help Center</string>
    <string name="l_Menu_CustomerService_4">USDA Farmers Market Directory</string>
    <string name="l_Menu_PostPrice_0">Add a New Post</string>
    <string name="l_Menu_PostPrice_1">Add a Post from Templates</string>
    <string name="l_Menu_PostPrice_2">Scheduled Posts</string>
    <string name="l_Menu_PostPrice_3">Pending Posts</string>
    <string name="l_Menu_PostPrice_4">Published Posts</string>
    <string name="l_Menu_VendorProfile_0">Business Name &#38; Address</string>
    <string name="l_Menu_VendorProfile_1">Phone &#38; Email</string>
    <string name="l_Menu_VendorProfile_2">Website &#38; Social Media</string>
    <string name="l_Menu_VendorProfile_3">USDA Organic Certification</string>
    <string name="l_Menu_VendorProfile_4">My Farmers Markets</string>
    <string name="l_Menu_VendorProfile_5">My Products</string>
    <string name="l_Menu_SocialNetwork_0">Friends</string>
    <string name="l_Menu_SocialNetwork_1">My QR Code</string>
    <string name="l_Menu_SocialNetwork_2">Friendship Requests</string>
    <string name="l_Menu_SocialNetwork_3">Messages</string>
    <string name="l_Menu_SocialNetwork_4">Notifications</string>
    <string name="l_Menu_AccountandSetting_0">Account Info</string>
    <string name="l_Menu_AccountandSetting_1">Logo</string>
    <string name="l_Menu_AccountandSetting_2">Search Preferences</string>
    <string name="l_Menu_AccountandSetting_3">Notification Settings</string>
    <string name="l_Menu_AccountandSetting_4">Friends &#38; Messages Settings</string>
    <string name="l_Menu_AccountandSetting_5">Delete My Account</string>
    <string name="l_001_FrontPage_Search_PlaceHolder_0">Search for products, vendors, farmers markets</string>
    <string name="l_003_About_Title_0">About Us</string>
    <string name="l_005_Contact_Title_0">Contact Us</string>
    <string name="l_005_Contact_Label_0">If you have any questions or concerns, please contact us.</string>
    <string name="l_005_Contact_Name_Label_0">Your name:</string>
    <string name="l_005_Contact_Email_Label_0">Your email:</string>
    <string name="l_005_Contact_Subject_Label_0">Subject:</string>
    <string name="l_005_Contact_Message_Label_0">Message:</string>
    <string name="l_010_MarketLocationList_Title_0">Posted Farmers Markets</string>
    <string name="l_010_MarketLocationList_Name_Label_0">Market Name:</string>
    <string name="l_010_MarketLocationList_Address_Label_0">Address:</string>
    <string name="l_012_VendorList_Title_0">Vendors that participate in market</string>
    <string name="l_015_ProductList_Title_0">Posted Products</string>
    <string name="l_015_ProductList_Category_Label_0">Category:</string>
    <string name="l_015_ProductList_Productname_Label_0">Product:</string>
    <string name="l_016_VendorMainpage_Title_0">Vendor Profile</string>
    <string name="l_016_VendorMainpage_Name_Label_0">Vendor name:</string>
    <string name="l_016_VendorMainpage_Address_Label_0">Address:</string>
    <string name="l_016_VendorMainpage_Phone_Label_0">Phone:</string>
    <string name="l_016_VendorMainpage_Email_Label_0">Email:</string>
    <string name="l_016_VendorMainpage_AddtoPreferlist_Button_0">Mark as preferred</string>
    <string name="l_016_VendorMainpage_RequestFriend_Button_0">Request friend</string>
    <string name="l_016_VendorMainpage_ProductsPost_Label_0">Products</string>
    <string name="l_016_VendorMainpage_Market_Label_0">Farmers markets</string>
    <string name="l_017_MarketMainpage_Title_0">Farmers Market Profile</string>
    <string name="l_017_MarketMainpage_Address_Label_0">Address:</string>
    <string name="l_017_MarketMainpage_Schedule_Label_0">Business Schedule:</string>
    <string name="l_017_MarketMainpage_Products_Label_0">Products:</string>
    <string name="l_017_MarketMainpage_VendorPostPrice_Label_0">Vendors posting prices:</string>
    <string name="l_017_MarketMainpage_AddtoPreferlist_Button_0">Mark as preferred</string>
    <string name="l_020_FullPost_Product_Label_0">Product:</string>
    <string name="l_020_FullPost_Price_Label_0">Price:</string>
    <string name="l_020_FullPost_Unit_Label_0">Unit:</string>
    <string name="l_020_FullPost_Message_Label_0">Message:</string>
    <string name="l_020_FullPost_Organic_Label_0">Organic:</string>
    <string name="l_020_FullPost_Organic_Label_1">Market Date:</string>
    <string name="l_020_FullPost_Vendor_Label_0">Vendor:</string>
    <string name="l_020_FullPost_Market_Label_0">Market:</string>
    <string name="l_020_FullPost_Location_Label_0">Location:</string>
    <string name="l_020_FullPost_MoreDetails_Button_0">More details...</string>
    <string name="l_100_Registration_Title_0">Sign Up</string>
    <string name="l_100_Registration_Username_Label_0">Username:</string>
    <string name="l_100_Registration_Username_PlaceHolder_0">Maximum 10 characters</string>
    <string name="l_100_Registration_Username_Error_0">Username cannot be blank./ Username already exists.</string>
    <string name="l_100_Registration_Password_Label_0">Password:</string>
    <string name="l_100_Registration_Password_PlaceHolder_0">Maximum 10 characters</string>
    <string name="l_100_Registration_Password_Error_0">Password cannot be blank.</string>
    <string name="l_100_Registration_ConfirmPassword_Label_0">Confirm password:</string>
    <string name="l_100_Registration_ConfirmPassword_PlaceHolder_0">Re-enter the password</string>
    <string name="l_100_Registration_Email_Label_0">Email:</string>
    <string name="l_100_Registration_Email_PlaceHolder_0">xxxxx@xxx.xxx</string>
    <string name="l_100_Registration_Email_Error_0">Email cannot be blank./ E-mail address is already in use./ E-mail address is invalid.</string>
    <string name="l_100_Registration_DisplayName_Label_0">Display name:</string>
    <string name="l_100_Registration_DisplayName_PlaceHolder_0">If not the same as username</string>
    <string name="l_100_Registration_SignUpVendor_CheckBox_0">Sign me up as a vendor</string>
    <string name="l_100_Registration_CreateAccount_Button_0">Sign Up</string>
    <string name="l_101_RoleOption_Title_0">Sign up as a vendor</string>
    <string name="l_101_RoleOption_Instruction_0">Through this system vendors are able to post the prices of the products they sell at specific farmers markets. Prices only for the upcoming market day are promoted, so customers have the most up-to-date information while shopping at your farmers market. As a signed-up vendor, you would update your information often through this app to keep your customers informed about the current prices and about any other special offers you have (and would like to advertise).</string>
    <string name="l_101_RoleOption_CheckBox_0">Yes, sign up as a vendor.</string>
    <string name="l_102_SignIn_Title_0">Sign In</string>
    <string name="l_102_SignIn_Username_Label_0">Username:</string>
    <string name="l_102_SignIn_Username_PlaceHolder_0">Username</string>
    <string name="l_102_SignIn_Password_Label_0">Password:</string>
    <string name="l_102_SignIn_Password_PlaceHolder_0">Password</string>
    <string name="l_102_SignIn_FogotPassword_Button_0">Forgot password?</string>
    <string name="l_102_SignIn_SignIn_Button_0">Sign In</string>
    <string name="l_102_SignIn_SignUp_Label_0">New to USDA Farmers Market Exchange?</string>
    <string name="l_102_SignIn_SignUp_Button_0">Join Us</string>
    <string name="l_102_SignIn_SignUp_Error_0">The username and password you entered don\'t match.</string>
    <string name="l_103_ResetPass_Title_0">Forgot Password?</string>
    <string name="l_103_ResetPass_Label_0">To reset your password, enter the email address you use to sign in to this system.</string>
    <string name="l_103_ResetPass_Email_PlaceHolder_0">Please enter your email</string>
    <string name="l_105_AccountSetting_Title_0">Account Info</string>
    <string name="l_105_AccountSetting_CurrentPassword_Label_0">Current password:</string>
    <string name="l_105_AccountSetting_CurrentPassword_PlaceHolder_0">Leave it blank if not changing it</string>
    <string name="l_105_AccountSetting_CurrentPassword_Error_0">Current password doesn\'t match.</string>
    <string name="l_105_AccountSetting_NewPassword_Label_0">New password:</string>
    <string name="l_105_AccountSetting_NewPassword_PlaceHolder_0">Leave it blank if not changing it</string>
    <string name="l_105_AccountSetting_ConfirmNewPassword_Label_0">Confirm new password:</string>
    <string name="l_105_AccountSetting_ConfirmNewPassword_PlaceHolder_0">Re-enter the new password</string>
    <string name="l_105_AccountSetting_NewPassword_Error_0">New password doesn\'t match.</string>
    <string name="l_105_AccountSetting_Email_Label_0">Email:</string>
    <string name="l_105_AccountSetting_Email_PlaceHolder_0">Enter your email</string>
    <string name="l_105_AccountSetting_Email_Error_0">E-mail adress is invalid.</string>
    <string name="l_105_AccountSetting_DisplayName_Label_0">Display name:</string>
    <string name="l_105_AccountSetting_DisplayName_PlaceHolder_0">Enter your display name</string>
    <string name="l_106_UserLogo_Title_0">User Logo</string>
    <string name="l_106_UserLogo_TakePhotoButton_Label_0">Take a picture</string>
    <string name="l_106_UserLogo_SelectPhotoButton_Label_0">Browse</string>
    <string name="l_106_UserLogo_UploadButton_Label_0">Upload</string>
    <string name="l_107_Notification_Title_0">Friends &#38; Messages Settings</string>
    <string name="l_107_Notification_EmailReminder_Label_0">Email reminder for posting</string>
    <string name="l_107_Notification_ReminderBefore_Label_0">Notification reminder for posting</string>
    <string name="l_107_Notification_AppFeatures_Label_0">App features and updates</string>
    <string name="l_107_Notification_FriendMe_Label_0">\"Friend Me\" requests</string>
    <string name="l_107_Notification_NewMessage_Label_0">Message from friends</string>
    <string name="l_108_SocialSetting_Title_0">Social Network Settings</string>
    <string name="l_108_SocialSetting_DontFriend_Label_0">Do not \"Friend Me\"</string>
    <string name="l_108_SocialSetting_DontReceive_Label_0">Do not receive private messages</string>
    <string name="l_108_SocialSetting_NotificationFriend_Label_0">Notifications for \"Friend Me\" requests</string>
    <string name="l_108_SocialSetting_NotificationNewMessage_Label_0">Notifications for new messages</string>
</resources>