<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nologin"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/l_Default_Menu_0" />
        <item
            android:id="@+id/nav_Login"
            android:title="@string/l_Default_Menu_1" />
        <item
            android:id="@+id/service"
            android:title="@string/l_Default_Menu_2" />
    </group>
    <group
        android:id="@+id/login_vendor"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/home_vendor"
            android:title="@string/l_Vendor_Menu_0" />

        <item
            android:id="@+id/post_price"
            android:title="@string/l_Vendor_Menu_1" />
        <item
            android:id="@+id/vendor_profile"
            android:title="@string/l_Vendor_Menu_2" />
        <item
            android:id="@+id/social_network_vendor"
            android:title="@string/l_Vendor_Menu_3" />
        <item
            android:id="@+id/account_vendor"
            android:title="@string/l_Vendor_Menu_4" />
        <item
            android:id="@+id/service_vendor"
            android:title="@string/l_Vendor_Menu_5" />
        <item
            android:id="@+id/sign_out_vendor"
            android:title="@string/l_Vendor_Menu_6" />
    </group>
    <group
        android:id="@+id/login_customer"
        android:checkableBehavior="single"
        android:visible="false">
        <item
            android:id="@+id/home_customer"
            android:title="@string/l_Customer_Menu_0" />
        <item
            android:id="@+id/social_network_customer"
            android:title="@string/l_Customer_Menu_1" />
        <item
            android:id="@+id/account_customer"
            android:title="@string/l_Customer_Menu_2" />
        <item
            android:id="@+id/signup_vendor_customer"
            android:title="@string/l_Customer_Menu_3" />
        <item
            android:id="@+id/service_customer"
            android:title="@string/l_Customer_Menu_4" />
        <item
            android:id="@+id/sign_out_customer"
            android:title="@string/l_Customer_Menu_5" />
    </group>
</menu>
